--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-  <header class="main__header">
-    <div class="container">
+  <header class="main-header">
+    <div class="wrapper">
       <div class="header">
         <a href="/index.html">
           <span class="logo"> </span>
@@ -27,12 +27,16 @@
         <a href="#" class="cart">корзина</a>
       </div>
       <div class=>
-        <h1 class="page__header welcome-section__header">Магазин готовых шаблонов</h1>  
+        <h1 class="catalog-header welcome-section__header">Магазин готовых шаблонов</h1>  
       </div>
     </div>
   </header>
-    <main class="container">
-        
-    </main>
+    <div class="catalog">
+      <form action="/" method="post" class="form-catalog">
+      <fieldset class="form-catalog__fieldset">
+        <legend class="form-catalog__legend">стоимость:</legend>
+      </fieldset>
+    </form>
+    </div>
 </body>
 </html>
