--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <header class="main__header">
-    <div class="container">
+  <header class="main-header">
+    <div class="wrapper">
       <div class="header">
         <a href="/index.html">
           <span class="logo"> </span>
@@ -41,7 +41,7 @@
     </div>
     </section>
   </header>
-  <main class="container">
+  <main class="wrapper">
     <section class="product section-line">
       <div class="product__item">
         <img src="/svg/illustration-1.svg" alt="ноутбук">
@@ -124,7 +124,7 @@
   </main>
     <section>
       <div class="contacts">
-        <div class="map container">
+        <div class="map wrapper">
           <div class="contact">
             <h2 class="contact__header">nёrds design studio</h2>
             <p class="contact__text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
@@ -135,7 +135,7 @@
         </div>
       </div>
     </section>
-  <footer class="container">
+  <footer class="wrapper">
     <div class="footer">
       <a class="icons__item" href="#"><img src="/svg/vk-icon.svg" alt="Иконка ВК"></a>
       <a class="icons__item" href="#"><img src="/svg/fb-icon.svg" alt="Иконка фейсбука"></a>
