Change way to css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Nerds</title>
   <link rel="stylesheet" href="/styles/normalize.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/styles/style.css" />
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
