--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
   <main class="wrapper">
     <section class="product section-line">
       <div class="product__item">
-        <img src="/svg/illustration-1.svg" alt="ноутбук">
+        <img src="svg/illustration-1.svg" alt="ноутбук">
         <h2>веб-сайты</h2>
         <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт</p>
         <a href="#" class="btn btn_red">заказать</a>
       </div>
       <div class="product__item">
-        <img src="/svg/illustration-2.svg" alt="телефон">
+        <img src="svg/illustration-2.svg" alt="телефон">
         <h2>приложения</h2>
         <p>Покорите топ-10 приложений в <br>AppStore и Google Play</p>
         <a href="#" class="btn btn_green">заказать</a>
       </div>
       <div class="product__item">
-        <img src="/svg/illustration-3.svg" alt="диаграммы">
+        <img src="svg/illustration-3.svg" alt="диаграммы">
         <h2>презентации</h2>
         <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
         <a href="#" class="btn btn_yellow">заказать</a>
@@ -77,7 +77,7 @@
         </ul>
       </div>
       <div class="company-statistics">
-        <img src="/svg/nerds-illustration.svg" alt="Логотип компании Nerds">
+        <img src="svg/nerds-illustration.svg" alt="Логотип компании Nerds">
         <p class="company-statisctics__header">C 2004 года любим точность во всем:</p>
         <div class="company-statistics__grid">
           <div class="company-statistics__item">
