--- a/catalog.html
+++ b/catalog.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nerds: Каталог шаблонов</title>
-    <link rel="stylesheet" href="/styles/normalize.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header class="main-header">
     <div class="wrapper">
       <div class="header">
-        <a href="/index.html">
+        <a href="index.html">
           <span class="logo"> </span>
         </a>
         <nav>
           <ul class="nav">
             <li class="nav__item"><a href="#" class="nav__item__link">студия</a></li>
             <li class="nav__item"><a href="#" class="nav__item__link">клиенты</a></li>
-            <li class="nav__item"><a href="/catalog.html" class="nav__item__link">магазин</a></li>
+            <li class="nav__item"><a href="catalog.html" class="nav__item__link">магазин</a></li>
             <li class="nav__item"><a href="#" class="nav__item__link">контакты</a></li>
           </ul>
         </nav>
