--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Nerds</title>
-  <link rel="stylesheet" href="/styles/normalize.css" />
+  <link rel="stylesheet" href="styles/normalize.css" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="/styles/style.css" />
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
   <header class="main-header">
     <div class="wrapper">
       <div class="header">
-        <a href="/index.html">
+        <a href="index.html">
           <span class="logo"> </span>
         </a>
         <nav>
           <ul class="nav">
             <li class="nav__item"><a href="#" class="nav__item__link">студия</a></li>
             <li class="nav__item"><a href="#" class="nav__item__link">клиенты</a></li>
-            <li class="nav__item"><a href="/catalog.html" class="nav__item__link">магазин</a></li>
+            <li class="nav__item"><a href="catalog.html" class="nav__item__link">магазин</a></li>
             <li class="nav__item"><a href="#" class="nav__item__link">контакты</a></li>
           </ul>
         </nav>
@@ -37,26 +37,26 @@
           </p>
           <a href="#" class="btn">узнать больше</a>
         </div>
-        <img class="image-phones" src="/svg/phones.svg" alt="Приложения на айфон" />
+        <img class="image-phones" src="svg/phones.svg" alt="Приложения на айфон" />
     </div>
     </section>
   </header>
   <main class="wrapper">
     <section class="product section-line">
       <div class="product__item">
-        <img src="/svg/illustration-1.svg" alt="ноутбук">
+        <img src="svg/illustration-1.svg" alt="ноутбук">
         <h2>веб-сайты</h2>
         <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт</p>
         <a href="#" class="btn btn_red">заказать</a>
       </div>
       <div class="product__item">
-        <img src="/svg/illustration-2.svg" alt="телефон">
+        <img src="svg/illustration-2.svg" alt="телефон">
         <h2>приложения</h2>
         <p>Покорите топ-10 приложений в <br>AppStore и Google Play</p>
         <a href="#" class="btn btn_green">заказать</a>
       </div>
       <div class="product__item">
-        <img src="/svg/illustration-3.svg" alt="диаграммы">
+        <img src="svg/illustration-3.svg" alt="диаграммы">
         <h2>презентации</h2>
         <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
         <a href="#" class="btn btn_yellow">заказать</a>
@@ -77,7 +77,7 @@
         </ul>
       </div>
       <div class="company-statistics">
-        <img src="/svg/nerds-illustration.svg" alt="Логотип компании Nerds">
+        <img src="svg/nerds-illustration.svg" alt="Логотип компании Nerds">
         <p class="company-statisctics__header">C 2004 года любим точность во всем:</p>
         <div class="company-statistics__grid">
           <div class="company-statistics__item">
@@ -100,22 +100,22 @@
         <ul class="clients">
           <li class="clients__item">
             <a href="#" class="clients__link">
-              <img src="/images/html-academy_logo.png" alt="Логотип компании HTML-Academy" class="clients__image">
+              <img src="images/html-academy_logo.png" alt="Логотип компании HTML-Academy" class="clients__image">
             </a>
           </li>
           <li class="clients__item">
             <a href="#">
-              <img src="/images/borodinsky_logo.png" alt="Логотип компании Pink" class="clients__image">
+              <img src="images/borodinsky_logo.png" alt="Логотип компании Pink" class="clients__image">
             </a>
           </li>
           <li class="clients__item">
             <a href="#">
-              <img src="/images/pink_logo.png" alt="Логотип компании Pink" class="clients__image">
+              <img src="images/pink_logo.png" alt="Логотип компании Pink" class="clients__image">
             </a>
           </li>
           <li class="clients__item">
             <a href="#">
-              <img src="/images/mishka_logo.png" alt="Логотип компании Mishka" class="clients__image">
+              <img src="images/mishka_logo.png" alt="Логотип компании Mishka" class="clients__image">
             </a>
           </li>
         </ul>
@@ -131,15 +131,15 @@
             <p class="contact__text">тел. <a class="contact__link" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
             <a class="btn btn_red" href="#">Напишите  нам</a>
           </div>
-          <img class="map__marker" src="/images/map-marker.png" alt="">
+          <img class="map__marker" src="images/map-marker.png" alt="">
         </div>
       </div>
     </section>
   <footer class="wrapper">
     <div class="footer">
-      <a class="icons__item" href="#"><img src="/svg/vk-icon.svg" alt="Иконка ВК"></a>
-      <a class="icons__item" href="#"><img src="/svg/fb-icon.svg" alt="Иконка фейсбука"></a>
-      <a class="icons__item" href="#"><img src="/svg/insta-icon.svg" alt="Иконка инстаграма"></a>
+      <a class="icons__item" href="#"><img src="svg/vk-icon.svg" alt="Иконка ВК"></a>
+      <a class="icons__item" href="#"><img src="svg/fb-icon.svg" alt="Иконка фейсбука"></a>
+      <a class="icons__item" href="#"><img src="svg/insta-icon.svg" alt="Иконка инстаграма"></a>
       <div class="footer__text">
       <h2 class="footer__text__header">Давайте дружить, это выгодно!</h2>
       <p>Скидка 10% для друзей из социальных сетей.</p>
