--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
   </main>
     <section>
       <div class="contacts">
+        <img src="svg/map.png" alt="карта">
         <div class="map wrapper">
           <div class="contact">
             <h2 class="contact__header">nёrds design studio</h2>
