--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,140 +13,143 @@
 <body>
   <header class="main-header">
     <div class="wrapper">
-      <div class="header">
+      <nav class="header">
         <a href="index.html">
-          <span class="logo"> </span>
+          <span class="logo"></span>
         </a>
-        <nav>
-          <ul class="nav">
-            <li class="nav__item"><a href="#" class="nav__item__link">студия</a></li>
-            <li class="nav__item"><a href="#" class="nav__item__link">клиенты</a></li>
-            <li class="nav__item"><a href="catalog.html" class="nav__item__link">магазин</a></li>
-            <li class="nav__item"><a href="#" class="nav__item__link">контакты</a></li>
-          </ul>
-        </nav>
+        <ul class="nav">
+          <li class="nav__item"><a href="index.html" class="nav__item__link">студия</a></li>
+          <li class="nav__item"><a href="#" class="nav__item__link">клиенты</a></li>
+          <li class="nav__item"><a href="catalog.html" class="nav__item__link">магазин</a></li>
+          <li class="nav__item"><a href="#" class="nav__item__link">контакты</a></li>
+        </ul>
         <a href="#" class="cart">корзина</a>
-      </div>
-      <section class="slider">
-        <div class="welcome-section">
-          <h1 class="welcome-section__header">Долго, дорого, скрупулезно.</h1>
-          <p class="welcome-section__text">
-            Математически выверенный дизайн <br />
-            для вашего сайта или мобильного приложения.
-          </p>
-          <a href="#" class="btn">узнать больше</a>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <section class="welcome-section">
+      <div class="wrapper">
+        <div class="welcome-container">
+          <div class="pros">
+            <p class="pros__header">Долго, дорого, скрупулезно.</p>
+            <p class="pros__text">
+              Математически выверенный дизайн <br />
+              для вашего сайта или мобильного приложения.
+            </p>
+            <a href="#" class="btn">узнать больше</a>
+          </div>
+          <img src="svg/phones.svg" alt="Приложения на айфон" />
         </div>
-        <img class="image-phones" src="svg/phones.svg" alt="Приложения на айфон" />
+      </div>
+    </section>
+    <div class="wrapper">
+      <section class="product section-line">
+        <div class="product__item">
+          <img src="svg/illustration-1.svg" alt="ноутбук">
+          <h2>веб-сайты</h2>
+          <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт</p>
+          <a href="#" class="btn btn_red">заказать</a>
+        </div>
+        <div class="product__item">
+          <img src="svg/illustration-2.svg" alt="телефон">
+          <h2>приложения</h2>
+          <p>Покорите топ-10 приложений в <br>AppStore и Google Play</p>
+          <a href="#" class="btn btn_green">заказать</a>
+        </div>
+        <div class="product__item">
+          <img src="svg/illustration-3.svg" alt="диаграммы">
+          <h2>презентации</h2>
+          <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
+          <a href="#" class="btn btn_yellow">заказать</a>
+        </div>
+      </section>
+      <section class="company section-line">
+        <div class="company__text">
+          <p class="company__title">Мы — маленькая, но гордая <br>
+            дизайн-студия из Краснодара.</p>
+          <p class="company__description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+            <br>превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
+          <p class="company__header">выполняем заказы на разработку:</p>
+          <ul>
+            <li class="company__item">Веб-сайтов любой сложности</li>
+            <li class="company__item">Мобильных приложений для iOS и Android</li>
+            <li class="company__item">Слайдшоу и видео для корпоративных презентаций</li>
+          </ul>
+        </div>
+        <div class="company-statistics">
+          <img src="svg/nerds-illustration.svg" alt="Логотип компании Nerds">
+          <p class="company-statisctics__header">C 2004 года любим точность во всем:</p>
+          <div class="company-statistics__grid">
+            <div class="company-statistics__item">
+              <p class="company-statistics__percent">146<sup>%</sup></p>
+              <p>Уровень самоотдачи</p>
+            </div>
+            <div class="company-statistics__item">
+              <p class="company-statistics__percent">100<sup>%</sup></p>
+              <p>Соблюдение сроков</p>
+            </div>
+            <div class="company-statistics__item">
+              <p class="company-statistics__percent">50<sup>%</sup></p>
+              <p>Минимальная предоплата</p>
+            </div>
+          </div>
+        </div>
+      </section> 
+      <section>
+        <div class="section-line">
+          <ul class="clients">
+            <li class="clients__item">
+              <a href="#" class="clients__link">
+                <img src="images/html-academy_logo.png" alt="Логотип компании HTML-Academy" class="clients__image">
+              </a>
+            </li>
+            <li class="clients__item">
+              <a href="#">
+                <img src="images/borodinsky_logo.png" alt="Логотип компании Pink" class="clients__image">
+              </a>
+            </li>
+            <li class="clients__item">
+              <a href="#">
+                <img src="images/pink_logo.png" alt="Логотип компании Pink" class="clients__image">
+              </a>
+            </li>
+            <li class="clients__item">
+              <a href="#">
+                <img src="images/mishka_logo.png" alt="Логотип компании Mishka" class="clients__image">
+              </a>
+            </li>
+          </ul>
+        </div>
     </div>
     </section>
-  </header>
-  <main class="wrapper">
-    <section class="product section-line">
-      <div class="product__item">
-        <img src="svg/illustration-1.svg" alt="ноутбук">
-        <h2>веб-сайты</h2>
-        <p>Мир никогда не будет прежним <br>после того как увидит ваш сайт</p>
-        <a href="#" class="btn btn_red">заказать</a>
-      </div>
-      <div class="product__item">
-        <img src="svg/illustration-2.svg" alt="телефон">
-        <h2>приложения</h2>
-        <p>Покорите топ-10 приложений в <br>AppStore и Google Play</p>
-        <a href="#" class="btn btn_green">заказать</a>
-      </div>
-      <div class="product__item">
-        <img src="svg/illustration-3.svg" alt="диаграммы">
-        <h2>презентации</h2>
-        <p>Вы даже не подозреваете, <br>насколько вы изумительны!</p>
-        <a href="#" class="btn btn_yellow">заказать</a>
-      </div>
-    </section>
-    <section class="company section-line">
-      <div class="company__text">
-        <p class="company__title">Мы — маленькая, но гордая <br>
-          дизайн-студия из Краснодара.</p>
-        <p class="company__description">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-          <br>превыше креатива. Работаем не покладая рук, как роботы.
-        </p>
-        <p class="company__header">выполняем заказы на разработку:</p>
-        <ul>
-          <li class="company__item">Веб-сайтов любой сложности</li>
-          <li class="company__item">Мобильных приложений для iOS и Android</li>
-          <li class="company__item">Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </div>
-      <div class="company-statistics">
-        <img src="svg/nerds-illustration.svg" alt="Логотип компании Nerds">
-        <p class="company-statisctics__header">C 2004 года любим точность во всем:</p>
-        <div class="company-statistics__grid">
-          <div class="company-statistics__item">
-            <p class="company-statistics__percent">146<sup>%</sup></p>
-            <p>Уровень самоотдачи</p>
-          </div>
-          <div class="company-statistics__item">
-            <p class="company-statistics__percent">100<sup>%</sup></p>
-            <p>Соблюдение сроков</p>
-          </div>
-          <div class="company-statistics__item">
-            <p class="company-statistics__percent">50<sup>%</sup></p>
-            <p>Минимальная предоплата</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="section-line">
-        <ul class="clients">
-          <li class="clients__item">
-            <a href="#" class="clients__link">
-              <img src="images/html-academy_logo.png" alt="Логотип компании HTML-Academy" class="clients__image">
-            </a>
-          </li>
-          <li class="clients__item">
-            <a href="#">
-              <img src="images/borodinsky_logo.png" alt="Логотип компании Pink" class="clients__image">
-            </a>
-          </li>
-          <li class="clients__item">
-            <a href="#">
-              <img src="images/pink_logo.png" alt="Логотип компании Pink" class="clients__image">
-            </a>
-          </li>
-          <li class="clients__item">
-            <a href="#">
-              <img src="images/mishka_logo.png" alt="Логотип компании Mishka" class="clients__image">
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
   </main>
-    <section>
-      <div class="contacts">
-        <img src="svg/map.png" alt="карта">
-        <div class="map wrapper">
-          <div class="contact">
-            <h2 class="contact__header">nёrds design studio</h2>
-            <p class="contact__text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-            <p class="contact__text">тел. <a class="contact__link" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-            <a class="btn btn_red" href="#">Напишите  нам</a>
-          </div>
-          <img class="map__marker" src="images/map-marker.png" alt="">
+  <section>
+    <div class="office">
+      <div class="map wrapper">
+        <div class="contacts">
+          <h2 class="contacts__header">nёrds design studio</h2>
+          <p class="contacts__text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
+          <p class="contacts__text">тел. <a class="contacts__link" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+          <a class="btn btn_red" href="#">Напишите нам</a>
         </div>
+        <img class="map__marker" src="images/map-marker.png" alt="">
       </div>
-    </section>
+    </div>
+  </section>
   <footer class="wrapper">
     <div class="footer">
       <a class="icons__item" href="#"><img src="svg/vk-icon.svg" alt="Иконка ВК"></a>
       <a class="icons__item" href="#"><img src="svg/fb-icon.svg" alt="Иконка фейсбука"></a>
       <a class="icons__item" href="#"><img src="svg/insta-icon.svg" alt="Иконка инстаграма"></a>
       <div class="footer__text">
-      <h2 class="footer__text__header">Давайте дружить, это выгодно!</h2>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+        <h2 class="footer__text__header">Давайте дружить, это выгодно!</h2>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </div>
     </div>
     </div>
   </div>
   </footer>
 </body>
-
 </html>
