--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nerds</title>
-  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/normalize.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -96,7 +97,7 @@
             </div>
           </div>
         </div>
-      </section> 
+      </section>
       <section>
         <div class="section-line">
           <ul class="clients">
@@ -149,7 +150,8 @@
       </div>
     </div>
     </div>
-  </div>
+    </div>
   </footer>
 </body>
+
 </html>
